# wowland

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: keybindings.toml
src/: main.rs
src/compositor/: config.rs  input.rs  launcher.rs  layout.rs  mod.rs  panel.rs  render.rs  runtime.rs  state.rs  wayland.rs  window.rs
