[package]
name = "wowland"
version = "0.1.0"
edition = "2021"

[dependencies]
calloop = "0.14.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
smithay = { version = "0.7.0", default-features = false, features = ["backend_winit", "renderer_gl", "wayland_frontend", "desktop"] }
toml = "0.8.23"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
wayland-protocols = "0.32.9"
wayland-server = "0.31.10"
winit = "0.30.12"
